// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation Hi here is another 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2019-08-20T16:42-04:00",
  "currentFileTime": 132107929267936980,
  "dayOfTheWeek": "Tuesday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2019-232",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation should not allow external requests in CI 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2019-08-20T20:42Z",
  "currentFileTime": 132108073266530560,
  "dayOfTheWeek": "Tuesday",
  "isDayLightSavingsTime": false,
  "ordinalDate": "2019-232",
  "serviceResponse": null,
  "timeZoneName": "UTC",
  "utcOffset": "00:00:00",
}
`;
